<resources>
    <string name="app_name">Second Price Auction</string>
    <string name="app_title">Second Price Auction</string>
    <string name="edit_offer">Submit an offer</string>
    <string name="button_send">Send</string>
    <string name="current_winning_bid_button">Refresh latest bids</string>
    <string name="winner_title">1st: </string>
    <string name="runner_up_title">2nd: </string>
    <string name="refresh_balance_button">REFRESH MY BALANCE</string>
    <string name="unknown_balance">(unknown)</string>
    <string name="winner_icon">1st place icon</string>
    <string name="runner_up_icon">2nd place icon</string>

    <string name="facebook_app_id">372609679919954</string>
    <string name="fb_login_protocol_scheme">fb372609679919954</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to menu -->
    <string name="menu_item_logout">Logout</string>
    <string name="menu_item_new_game">New game</string>
    <string name="menu_item_wallet">Connect wallet</string>
    <string name="menu_item_create_wallet">Create new wallet</string>
    <string name="menu_item_import_wallet">Connect existing wallet</string>
    <string name="menu_item_dummy_wallet">Use built-in wallet</string>


</resources>
