<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dori.sandbox.MainActivity">

    <TextView
        android:id="@+id/winner_bid_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="52sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/winner_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/winner_textview"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="0" />

    <Button
        android:id="@+id/refresh_bids_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showBids"
        android:text="@string/current_winning_bid_button"
        app:layout_constraintBottom_toTopOf="@+id/offer_edittext"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/runner_up_textview" />

    <EditText
        android:id="@+id/offer_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edit_offer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/offer_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/offer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:onClick="offer"
        android:text="@string/button_send"
        app:layout_constraintBaseline_toBaselineOf="@+id/offer_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/offer_edittext" />

    <TextView
        android:id="@+id/runner_up_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="RUNNER-UP:"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/refresh_bids_button"
        app:layout_constraintEnd_toStartOf="@+id/runner_up_bid_textview"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winner_textview" />

    <TextView
        android:id="@+id/winner_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:text="WINNER:"
        android:textAlignment="center"
        android:textSize="52sp"
        app:layout_constraintBottom_toTopOf="@+id/runner_up_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/winner_bid_textview"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/runner_up_bid_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="0"
        app:layout_constraintBaseline_toBaselineOf="@+id/runner_up_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/runner_up_textview" />

</android.support.constraint.ConstraintLayout>
